# embers

./: CMakeLists.txt
include/embers/: hello-world.h  run.h  shader.h
src/: hello-world.cc  run.cc  shader.cc  test.h
